@@ -11,22 +11,22 @@ MD5 33cdd958f1be433095a69bff6be18148 files/emacs-cvs-freebsd-sparc.patch 475
 RMD160 a8e6e3f2bc014979fd269a027835a65520c12417 files/emacs-cvs-freebsd-sparc.patch 475
 SHA256 43584ea923e6c7221e69d1d6a14d55d386565c5decd067a62acc58af522c803b files/emacs-cvs-freebsd-sparc.patch 475
 DIST emacs-22.0.96.tar.gz 37846686 RMD160 d980f7f8ec6c646a9b741718284b081987f9d73c SHA1 e2942bdbf693a0814fcc3b34d5ae55765d5d4ad8 SHA256 a9fa904e00e09d8b68e701edda208bd274053d26d0b50d97d6c977084e5c307d
-EBUILD emacs-cvs-22.0.96.ebuild 7770 RMD160 4678317cf3fb80aab0b502e9000d6db455bceaba SHA1 2a8e2f477a997c17fa8fd7f9c54eb500c9ba6b80 SHA256 0c515f84f72ac534ec39995d90258f9318f508016bdc7da869d6fed8bb8ee4cd
-MD5 cc814509c323a544f378611882a7d98a emacs-cvs-22.0.96.ebuild 7770
-RMD160 4678317cf3fb80aab0b502e9000d6db455bceaba emacs-cvs-22.0.96.ebuild 7770
-SHA256 0c515f84f72ac534ec39995d90258f9318f508016bdc7da869d6fed8bb8ee4cd emacs-cvs-22.0.96.ebuild 7770
-EBUILD emacs-cvs-22.0.9999-r8.ebuild 8088 RMD160 c8a5322956be08790d80a44eb6f42d6cdcb30e2a SHA1 cfee3ee3e79618cb01c96f3872333fd7961c0a71 SHA256 1e48b288d7f890eb59f20572267d6bb497f1d7437da4db4a1ee0b8bd343afac8
-MD5 9c529d54380d23a14aa06ad0b360bddb emacs-cvs-22.0.9999-r8.ebuild 8088
-RMD160 c8a5322956be08790d80a44eb6f42d6cdcb30e2a emacs-cvs-22.0.9999-r8.ebuild 8088
-SHA256 1e48b288d7f890eb59f20572267d6bb497f1d7437da4db4a1ee0b8bd343afac8 emacs-cvs-22.0.9999-r8.ebuild 8088
-EBUILD emacs-cvs-23.0.0-r4.ebuild 8346 RMD160 359ed31339a37634d7bee8c05a64886b435e4b9a SHA1 f098a2b1480dadbcbaa60cd81240237ca67a2b26 SHA256 4dd1f0d708cb218d08f6b8f1542fabd7e73feaca3b1d70d62c615f2480896b6e
-MD5 cfca3df0775156f04458d85167ddc78b emacs-cvs-23.0.0-r4.ebuild 8346
-RMD160 359ed31339a37634d7bee8c05a64886b435e4b9a emacs-cvs-23.0.0-r4.ebuild 8346
-SHA256 4dd1f0d708cb218d08f6b8f1542fabd7e73feaca3b1d70d62c615f2480896b6e emacs-cvs-23.0.0-r4.ebuild 8346
-MISC ChangeLog 8224 RMD160 d5f3579d8be68cabdb6a63a07e912df0a986441a SHA1 d67e2870e80ff135b642a36c8857818314a22714 SHA256 dd5cb300ca69d48a9b1e183a49bb7afbe38922c8359bfdb58539ea035e7f91ae
-MD5 11dd8086c4babd7918f44d6e22077229 ChangeLog 8224
-RMD160 d5f3579d8be68cabdb6a63a07e912df0a986441a ChangeLog 8224
-SHA256 dd5cb300ca69d48a9b1e183a49bb7afbe38922c8359bfdb58539ea035e7f91ae ChangeLog 8224
+EBUILD emacs-cvs-22.0.96.ebuild 7684 RMD160 15591e699ab285477ee0b8f3d71997f1714b4194 SHA1 2ea11f5f4b6b1518eff99c260b2f58e7d62c479b SHA256 9f1455c373ee67f35c15682666e60e128c5f8de21fe27d3d61567d22526c5d00
+MD5 6d91a364dc46281cd4eea6a9df4309e5 emacs-cvs-22.0.96.ebuild 7684
+RMD160 15591e699ab285477ee0b8f3d71997f1714b4194 emacs-cvs-22.0.96.ebuild 7684
+SHA256 9f1455c373ee67f35c15682666e60e128c5f8de21fe27d3d61567d22526c5d00 emacs-cvs-22.0.96.ebuild 7684
+EBUILD emacs-cvs-22.0.9999-r8.ebuild 8002 RMD160 c21d854e299b31f63d2cfa5a1ba98ebc2ab424a0 SHA1 ca6d159acccb285a32a5efc3730005bb09f3a94a SHA256 6e4c90df4ecfede617d4f7be8ab65fb69dee07160b71e6ddc9d7a57c67e88a47
+MD5 dcf76f94a98e37d077859468ec9c6629 emacs-cvs-22.0.9999-r8.ebuild 8002
+RMD160 c21d854e299b31f63d2cfa5a1ba98ebc2ab424a0 emacs-cvs-22.0.9999-r8.ebuild 8002
+SHA256 6e4c90df4ecfede617d4f7be8ab65fb69dee07160b71e6ddc9d7a57c67e88a47 emacs-cvs-22.0.9999-r8.ebuild 8002
+EBUILD emacs-cvs-23.0.0-r4.ebuild 8260 RMD160 0668f4dbd4773a2d7f908e08d9b02586d3853f9d SHA1 fa959e28a4e66bac783e18179a4664779d207bbc SHA256 8795a67d87f5256f2124ae3cdce69e6c64ed50f79587d61625afbff65357507a
+MD5 0580e5db1304b6fb136697ee33ba9faa emacs-cvs-23.0.0-r4.ebuild 8260
+RMD160 0668f4dbd4773a2d7f908e08d9b02586d3853f9d emacs-cvs-23.0.0-r4.ebuild 8260
+SHA256 8795a67d87f5256f2124ae3cdce69e6c64ed50f79587d61625afbff65357507a emacs-cvs-23.0.0-r4.ebuild 8260
+MISC ChangeLog 8410 RMD160 099bfb5300406b683bc80e9389732e36985cdc37 SHA1 62b3d7de9e4e36b73e47825a495ed3512b2ea5a5 SHA256 25c9e33f99ab5d01b2f503f58904b02ae1e69127fd2aa81c5840446b2b39ee1b
+MD5 f8c877769d6806b5bf7dab430f9b5f1d ChangeLog 8410
+RMD160 099bfb5300406b683bc80e9389732e36985cdc37 ChangeLog 8410
+SHA256 25c9e33f99ab5d01b2f503f58904b02ae1e69127fd2aa81c5840446b2b39ee1b ChangeLog 8410
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
