@@ -43,14 +43,14 @@ EBUILD emacs-18.59-r3.ebuild 2465 RMD160 87dafe0fcdc9631503d860a1151acd946ce14ab
 MD5 cd9890c79aa5fb5e92b6630bc206b199 emacs-18.59-r3.ebuild 2465
 RMD160 87dafe0fcdc9631503d860a1151acd946ce14aba emacs-18.59-r3.ebuild 2465
 SHA256 910740f3502ac9652df9a2ddb5df720c2fff500354a1b4bb3cf4916422354e52 emacs-18.59-r3.ebuild 2465
-EBUILD emacs-21.4-r10.ebuild 5544 RMD160 70499476d16a952f270b8669a84455ace5823868 SHA1 3e0ee0262ace1fefd07b0ac7866539f00cbbcfe1 SHA256 b4954979430a56c312a3edbebd1b45ea71492cea75b54fdf67990958c6764670
-MD5 8a7431389cb15a6fbde0decdba9c672b emacs-21.4-r10.ebuild 5544
-RMD160 70499476d16a952f270b8669a84455ace5823868 emacs-21.4-r10.ebuild 5544
-SHA256 b4954979430a56c312a3edbebd1b45ea71492cea75b54fdf67990958c6764670 emacs-21.4-r10.ebuild 5544
-MISC ChangeLog 2388 RMD160 3f00cfec88da625d6cb36639e5c78b1bf732917b SHA1 31cae78cbff5d4057af853bbb99da6b43aa38327 SHA256 a0ba8ae8d1e975ee4a660aa7ed2162511438fcf9325c551ffd05c3773f373289
-MD5 6bd3c4abdf8f6204474866e51cf64a0b ChangeLog 2388
-RMD160 3f00cfec88da625d6cb36639e5c78b1bf732917b ChangeLog 2388
-SHA256 a0ba8ae8d1e975ee4a660aa7ed2162511438fcf9325c551ffd05c3773f373289 ChangeLog 2388
+EBUILD emacs-21.4-r10.ebuild 5460 RMD160 3918acc7d4517cd9fcc14fd331951f7edd3e527e SHA1 8f8fb25ce19f0c8dfd646d9ab66e40fd0d1ac453 SHA256 81edf10ed0d4e04ac086aa9808cd2f63cb7725468a11b7fc693f47b54351a1ed
+MD5 61b1c53c85750622a9068aa3b0b4f4c1 emacs-21.4-r10.ebuild 5460
+RMD160 3918acc7d4517cd9fcc14fd331951f7edd3e527e emacs-21.4-r10.ebuild 5460
+SHA256 81edf10ed0d4e04ac086aa9808cd2f63cb7725468a11b7fc693f47b54351a1ed emacs-21.4-r10.ebuild 5460
+MISC ChangeLog 2508 RMD160 71cba626b8f195f27e24d4c83e1b1bcbc3860f8d SHA1 31b46d740a52977062cb2fe9ddafae6fc1a588be SHA256 a63b099d2d65ecf0f0bf1ae5aa8a21a43c28761d4fa2885d78966ee0e14c3263
+MD5 2acaaedeec31f1b3ceb9f665f5b21326 ChangeLog 2508
+RMD160 71cba626b8f195f27e24d4c83e1b1bcbc3860f8d ChangeLog 2508
+SHA256 a63b099d2d65ecf0f0bf1ae5aa8a21a43c28761d4fa2885d78966ee0e14c3263 ChangeLog 2508
 MISC metadata.xml 158 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 SHA1 61f6eff9729cd87a725c2a70c81aca4270a17fc4 SHA256 1393bdef3a74343fdb40a112c7096a1af16f67e7a43413250de28dfe73810eab
 MD5 fcd33d07e4ee719b01157946734f4fe8 metadata.xml 158
 RMD160 415d172437ca754d24fc5ab186ba8e77934d96e4 metadata.xml 158
