@@ -2,6 +2,9 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  30 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-21.4-r10.ebuild:
+  Info rebuild moved to separate function.
+
   28 Mar 2007; Ulrich Mueller <ulm@kph.uni-mainz.de> emacs-21.4-r10.ebuild:
   Rebuild Info dir file in pkg_postinst and pkg_postrm.
 
